# image-recognition-model

./: datadrafters.ipynb  pyproject.toml  readme.md.txt
test/: keras_model.h5
